java-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-test-deployment
  namespace: default
  labels:
    app: java-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-test
  template:
    metadata:
      labels:
        app: java-test
    spec:
      containers:
      - name: java-test
        image: docker.ctt.tmx.cloud/java-test
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: nexus
