java-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
  labels:
    app: java
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    matchLabels:
      app: java
