java-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-test-ingress
  namespace: default
  
spec:
  rules:
    - host: www.java-test.ctt
      http:
        paths:
          - backend:
              resource:
#                apiGroup: string
#                kind: string
#                name: string
              service:
                name: java-service
                port:
                  name: http

            path: /
            pathType: ImplementationSpecific
